[Fix] Fields - always align to left of cell

--- a/src/sass/_parts/body-cell.sass
+++ b/src/sass/_parts/body-cell.sass
@@ -12,6 +12,9 @@
 	box-sizing: border-box
 	._tableRowDrilldown &
 		background-color: $subberwhite
+	&._isBreakdownBar,
+	&._isFields,
+		justify-content: flex-start !important
 
 	.alignment---center &
 		justify-content: center
