--- a/src/sass/_parts/ipDetails.sass
+++ b/src/sass/_parts/ipDetails.sass
@@ -44,7 +44,7 @@
 		text-transform: uppercase
 		color: $black
 		+arrow($side: "top", $align: "center", $size: 7px, $color: $bgColor, $borderColor: $subwhite, $borderSize: 3px)
-		box-shadow: 0px 4px 18px rgba(0,0,0,0.24)
+		box-shadow: 0px 3px 18px rgba(0,0,0,0.24)
 		opacity: 0
 		visibility: hidden
 		transition: opacity 0.20s linear 0.25s, visibility 0.20s linear 0.25s
